tests/transpiler/x/zig/sort_stable.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/sort_stable.zig:10:19: error: unable to infer array size
